[project]
name = "weartsdk"
version = "#{VERSION}#"
authors = [
  { name="Emanuele De Santis", email="trunk96@gmail.com" },
]
maintainers = [
  { name="WEART" },
]
description = "WEART SDK low-level Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/WEARTHaptics/WEART-SDK-Python"
Issues = "https://github.com/WEARTHaptics/WEART-SDK-Python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "weartsdk/*.py"
]
packages = ["weartsdk"]

[tool.hatch.build.targets.wheel]
include = [
  "weartsdk/*.py"
]
packages = ["weartsdk"]