[project]
name = "weartsdk"
version = "1.0.3"
authors = [
  { name="Emanuele De Santis", email="trunk96@gmail.com" },
  { name="WEART Srl", email="support@weart.it" }
]
maintainers = [
  { name="WEART Srl" },
]
description = "WEART SDK low-level Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/WEARTHaptics/WEART-SDK-Python"
Issues = "https://github.com/WEARTHaptics/WEART-SDK-Python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "weartsdk/*.py"
]
packages = ["weartsdk"]

[tool.hatch.build.targets.wheel]
include = [
  "weartsdk/*.py"
]
packages = ["weartsdk"]